# gpt4all

./: .gitignore  CMakeLists.txt  package-lock.json  package.json  test.js  utils.cmake
lib/: index.d.ts  index.js
scripts/: dlls.js
src/addon/: Model.cc  Model.h  PredictWorker.h  exports.cc  utils.cc  utils.h
src/nodeml_gpt4all/: FunctionWorker.h  Model.cc  Model.h  ModelPromptContext.h  PredictWorker.h  exports.cc
